--- a/app/src/main/res/layout/activity_animation_effects.xml
+++ b/app/src/main/res/layout/activity_animation_effects.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,4 +12,10 @@
     <com.jetpack.compose.DynamicEffectsView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <com.jetpack.blur.RealtimeBlurView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:blurRadius="20dp"
+        app:overlayColor="#80000000" />
 </FrameLayout>
