--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,22 +9,9 @@
     android:padding="10dp"
     tools:context=".activity.NativeEmbedActivity">
 
-    <Button
-        android:id="@+id/btn_native1"
+    <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/btn_themed_background"
-        android:text="原生UI"
-        android:textColor="@android:color/white" />
-
-    <Button
-        android:id="@+id/btn_native2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/btn_themed_background"
-        android:text="原生UI"
-        android:textColor="@android:color/white" />
-
-</LinearLayout>
+        android:orientation="vertical" />
+</ScrollView>
